# simple-downloader

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
simple_downloader/: __main__.py  config.py  manage.py
simple_downloader/core/: exceptions.py  log_settings.py  logging_settings.py  logs.py  models.py  parsing.py  utils.py
simple_downloader/crawlers/: __init__.py  bunkr.py  cyberdrop.py  pixeldrain.py
simple_downloader/handlers/: downloader.py  factory.py  requester.py
